intervalsets-macros/tests/ui/set_bad_piece.rs
use intervalsets_macros::set;

fn main() {
    let _ = set!("{[10, 0]}");
}
